# lidar2numpy

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
docs/: jt128-packet-format.md  usage.md
scripts/: pcap_to_mcap.py
src/hydra4/: __init__.py  hydra4.py  structs.py
src/hydra4/calibrations/: pandar_ot128.csv
src/hydra4/decoders/: __init__.py  base.py  pandar_ot128.py  pandar_xt32.py
src/hydra4/msgs/: __init__.py  builtin_interfaces.py  pandar_msgs.py  std_msgs.py
src/lidar2numpy/: __init__.py  calibration.py  decoder.py  firing_times.py  frame_assembler.py  pcap.py  structs.py
tests/: _packet_builder.py  conftest.py  test_calibration.py  test_decoder.py  test_firing_times.py  test_frame_assembler.py  test_integration.py  test_public_api.py  test_spherical.py  test_structs.py
tests/e2e/: test_pandar_ot128.py  test_pandar_xt32.py
tests/fixtures/lidar-Port 2368/: angle_corrections - 2368.csv
tests/fixtures/lidar-Port 2369/: angle_corrections - 2369.csv
tests/integration/: test_ot128_decoder.py  test_xt32_decoder.py
tests/rosbags/pandar_ot128/: metadata.yaml
tests/rosbags/pandar_xt32/: metadata.yaml
tests/test/: test_hydra4.py
tests/unit/: test_calibration.py  test_hydra_internals.py  test_model.py  test_structs.py
