[project]
name = "lidar2numpy"
version = "0.1.0"
description = "Decode Hesai JT128 LiDAR UDP packets into structured NumPy arrays"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
dependencies = [
    "numpy>=1.22.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
urls.Source = "https://github.com/MapIV/hydra4"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.3",
    "mypy>=1.0",
    "mcap>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lidar2numpy"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "docs/",
    "context/",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "PLR", "B"]
ignore = ["PLR2004"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Packet decoder has inherent statement complexity
"src/lidar2numpy/decoder.py" = ["PLR0912", "PLR0915"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
