[project]
name = "hydra4"
dynamic = ["version"]
description = "Decode Hesai Pandar Packets to NumPy arrays or PointCloud2 messages"
authors = [{ name = "urasakikeisuke", email = "keisuke.urasaki@map4.jp" }]
dependencies = [
    "numpy>=1.21.0",
    "pypcd4>=0.4.11",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Utilities",
    "Framework :: Robot Framework :: Tool",
]
urls.Source = "https://github.com/MapIV/hydra4"
urls.Tracker = "https://github.com/MapIV/hydra4/issues"
urls."Release Notes" = "https://github.com/MapIV/hydra4/releases"

[project.optional-dependencies]
dev = ["ruff", "mypy", "setuptools-scm"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "rosbags>=0.10.0",
    "pytest>=8.2.0",
    "ruff>=0.4.3",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "setuptools-scm>=8.0.4",
    "tox>=4.15.0",
]

[tool.rye.scripts]
lint = { chain = [
    "lint:ruff-lint",
    "lint:ruff-format",
    "lint:mypy",
    "lint:tox",
] }
"lint:ruff-lint" = "ruff check --fix src"
"lint:ruff-format" = "ruff format src"
"lint:mypy" = "mypy src"
"lint:tox" = "tox"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/hydra4/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
exclude = [
  "*.pcd",
  "tests/",
]

[tool.setuptools_scm]
write_to = "src/hydra4/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "PLR", "B", "ANN"]
ignore = ["ANN101", "ANN102", "PLR2004"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        py38
        py39
        py310
        py311
        py312

    [testenv]
    deps =
        pytest
        rosbags
    commands = pytest tests -vv
"""
